// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product with backorder badge 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-backorder-4"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Backorder
    </span>
  </div>
</div>
`;

exports[`Product with bestseller and low inventory badges 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-sale-7"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Sale
    </span>
  </div>
  <div
    className="Badge-badge-12 BadgeOverlay-secondaryBadge-11"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Low Inventory
    </span>
  </div>
</div>
`;

exports[`Product with low inventory badge 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-lowInventory-6"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Low Inventory
    </span>
  </div>
</div>
`;

exports[`Product with no badges 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
/>
`;

exports[`Product with sale and bestseller badges 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-sale-7"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Sale
    </span>
  </div>
</div>
`;

exports[`Product with sale and low inventory badges 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-sale-7"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Sale
    </span>
  </div>
  <div
    className="Badge-badge-12 BadgeOverlay-secondaryBadge-11"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Low Inventory
    </span>
  </div>
</div>
`;

exports[`Product with sale badge 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-sale-7"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Sale
    </span>
  </div>
</div>
`;

exports[`Product with sold out badge 1`] = `
<div
  className="BadgeOverlay-badgeOverlay-1 BadgeOverlay-faded-2"
>
  <div
    className="Badge-badge-12 BadgeOverlay-status-3 BadgeOverlay-soldOut-8"
  >
    <span
      className="Badge-labelStyle-13"
    >
      Sold Out
    </span>
  </div>
</div>
`;
